# brainco_hand_service

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh-CN.md  brainco_service.cpp  main.cpp  run.sh  setup_autostart.sh
.github/workflows/: build.yml
example/: example_brainco_hand.cpp  test_hand_comm.cpp
include/: param.h
include/dds/: Subscription.h
test/: test_brainco_hand_server.cpp
